create create room documentation swagger
